k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-classroom
  labels:
    app.kubernetes.io/name: my-classroom
