k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-classroom
  namespace: my-classroom
spec:
  type: NodePort
  selector:
    app: my-classroom
  ports:
    - name: http
      port: 80
      targetPort: 80
      # tinie-bakerie holds 30080; my-classroom is reachable at <pi-ip>:30081.
      nodePort: 30081
